--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,19 +14,35 @@ html, body {
 
 header {
     width: 100vw;
-    text-align: center;
     padding-bottom: 10%;
+}
+header > h1 {
+    text-align: center;
+    padding-bottom: 2vh;
 }
 
 header > menu {
     width: 30vw;
+    display: none;
+}
+
+i#burger {
+    width: 100vw;
     display: block;
+    color: white;
+    text-align: center;
+    padding: 1%;
+    cursor: pointer;
+}
+i#burger:hover {
+    background-color: white;
+    color: black;
 }
 
 header > menu > ul > li {
     list-style-type: none;
-    margin-top: 2px;
-    margin-left: 5vw;
+    margin: auto;
+    width: 100vw;
     border-radius: 5px;
 }
 
@@ -34,6 +50,7 @@ header > menu > ul > li > a {
     display: block;
     text-decoration: none;
     color: white;
+    text-align: center;
 }
 
 header > menu > ul > li:hover {
